# Packages for Polkability Oracle.

[package]
name = "polkability-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11.24"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
chrono = "0.4.35"